--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,4 @@
 {
     "version": 2,
-    "name": "romulomonte",
-    "builds": [
-      {
-        "src": "index.html",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/",
-        "dest": "/index.html"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ],
-    "regions": ["gru1"],
-    "cleanUrls": true,
-    "trailingSlash": false
+    "regions": ["gru1"]
   }
