feat: adicionar sistema fintech de controle de capital

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,10 @@
       ]
     },
     {
+      "source": "/fintech",
+      "destination": "/fintech/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/pitch-saude.html",
       "has": [
